[package]
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ipfs"
version = "0.1.0"

[profile.dev]
opt-level = 1

[features]
default = []
nightly = []

[dependencies]
anyhow = { default-features = false, version = "1.0" }
async-std = { default-features = false, features = ["attributes", "std"], version = "1.6" }
async-stream = { default-features = false, version = "0.3" }
async-trait = { default-features = false, version = "0.1" }
bitswap = { path = "bitswap" }
byteorder =  { default-features = false, version = "1.3" }
bytes = { default-features = false, version = "0.5" }
cid = { default-features = false, version = "0.5" }
dirs = { default-features = false, version = "3.0" }
domain = { default-features = false, version = "0.5" }
domain-resolv = { default-features = false, version = "0.5" }
futures = { default-features = false, features = ["compat", "io-compat"], version = "0.3.5" }
ipfs-unixfs = { path = "unixfs" }
libipld = { branch = "update_cid", default-features = false, features = ["dag-pb", "dag-json"], git = "https://github.com/ljedrz/rust-ipld" }
libp2p = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-async-std", "mdns", "mplex", "ping", "secio", "yamux"], version = "0.22" }
multibase = { default-features = false, version = "0.8" }
multihash = { default-features = false, version = "0.11" }
prost = { default-features = false, version = "0.6" }
rand = { default-features = false, features = ["getrandom"], version = "0.7" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, version = "1.0" }
thiserror = { default-features = false, version = "1.0" }
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = ["std", "futures-03"], version = "0.2" }
void = { default-features = false, version = "1.0" }

[build-dependencies]
prost-build = { default-features = false, version = "0.6" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.3" }
sha2 = { default-features = false, version = "0.9" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log", "ansi", "env-filter"], version = "0.2" }

[workspace]
members = [ "bitswap", "http", "unixfs" ]

[patch.crates-io]
ctr = { branch = "ctr128-64to128", git = "https://github.com/koivunej/stream-ciphers.git" }

# at least these libp2p components need to be patched if you want to use a local version
# libp2p = { path = "../libp2p" }
# libp2p-core = { path = "../libp2p" }
# libp2p-swarm = { path = "../libp2p" }
# libp2p-floodsub = { path = "../libp2p" }
