[package]
authors = ["Rust-IPFS contributors"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ipfs"
readme = "README.md"
repository = "https://github.com/rs-ipfs/rust-ipfs"
description = "IPFS node implementation"
version = "0.2.1"

[features]
default = []

# feature will enable sled_data_store use in ipfs::Types (default used by ipfs-http for example)
# sled dependency is not guarded by this to keep compiling and test the pinstore.
sled_data_store = []
test_go_interop = []
test_js_interop = []

[dependencies]
anyhow = { default-features = false, version = "1.0" }
async-stream = { default-features = false, version = "0.3" }
async-trait = { default-features = false, version = "0.1" }
base64 = { default-features = false, features = ["alloc"], version = "0.12" }
ipfs-bitswap = { version = "0.1", path = "bitswap" }
byteorder = { default-features = false, version = "1.3" }
bytes = { default-features = false, version = "1" }
cid = { default-features = false, version = "0.5" }
trust-dns-resolver = "0.20"
either = { default-features = false, version = "1.5" }
futures = { default-features = false, version = "0.3.9", features = ["alloc", "std"] }
ipfs-unixfs = { version = "0.2", path = "unixfs" }
libp2p = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns"], version = "0.34" }
multibase = { default-features = false, version = "0.8" }
multihash = { default-features = false, version = "0.11" }
prost = { default-features = false, version = "0.7" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["std"], version = "1.0" }
thiserror = { default-features = false, version = "1.0" }
tokio = { default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync"], version = "1.0" }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.6" }
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = ["std-future", "std", "futures-03"], version = "0.2" }
void = { default-features = false, version = "1.0" }
fs2 = "0.4.3"
sled = "0.34"
once_cell = "1.5.2"

[build-dependencies]
prost-build = { default-features = false, version = "0.7" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.3" }
sha2 = { default-features = false, version = "0.9" }
tokio = { default-features = false, features = ["io-std", "io-util", "time"], version = "1" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log", "ansi", "env-filter"], version = "0.2" }
rand = { default-features = false, version = "0.8", features = ["std", "std_rng"] }
tempfile = "3.1.0"

[workspace]
members = [ "bitswap", "http", "unixfs" ]

# at least these libp2p components need to be patched if you want to use a local version
# libp2p = { path = "../libp2p" }
# libp2p-core = { path = "../libp2p" }
# libp2p-swarm = { path = "../libp2p" }
# libp2p-floodsub = { path = "../libp2p" }
