[package]
name = "ipfs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cid = "*"

[dependencies.ipfs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_ipld"
path = "fuzz_targets/decode_ipld.rs"
test = false
doc = false
