[package]
name = "ipfs-http"
version = "0.1.0"
authors = ["Joonas Koivunen <joonas@equilibrium.co>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
prost-build = "0.6.1"
vergen = "3.1.0"

[dependencies]
async-std = { default-features = false, features = ["attributes"], version = "1.6" }
base64 = "0.12.0"
cid = "0.5"
env_logger = "0.7.1"
futures = "0.3.4"
ipfs = { path = "../" }
libipld = { git = "https://github.com/ljedrz/rust-ipld", branch = "update_cid", features = ["dag-pb", "dag-json"] }
log = "0.4.8"
multibase = "0.8.0"
multihash = "0.11"
# openssl is required for rsa keygen but not used by the rust-ipfs or it's dependencies
openssl = "0.10.30"
percent-encoding = "2.1.0"
prost = "0.6.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
structopt = "0.3.12"
thiserror = "1.0.14"
tokio = { version = "0.2.16", features = ["full"] }
warp = "0.2.3"
hyper = "0.13.6"
async-stream = "0.2.1"
pin-project = "0.4.8"
url = "2.1.1"
tar = { version = "0.4.28", default-features = false }
bytes = "0.5.4"
mpart-async = "0.4.1"
mime = "0.3.16"
humantime = "2.0.1"

[dev-dependencies]
hex = "0.4.2"
hex-literal = "0.2.1"
tempfile = "3.1.0"
