[package]
name = "ipfs-unixfs"
version = "0.0.1"
authors = ["Joonas Koivunen <joonas@equilibrium.co>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "UnixFs tree support"
repository = "https://github.com/rs-ipfs/rust-ipfs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "filetime" ]

[dependencies]
quick-protobuf = "0.7.0"
cid = "0.5"
filetime = { version = "0.2.10", optional = true }
either = "1.5.3"
sha2 = "0.8.1"
multihash = "0.11.2"

[dev-dependencies]
multibase = "0.8.0"
hex-literal = "0.2.1"
libc = "0.2.71"
