[package]
authors = ["Rust-IPFS contributors"]
description = "UnixFs tree support"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ipfs-unixfs"
readme = "README.md"
repository = "https://github.com/rs-ipfs/rust-ipfs"
version = "0.2.0"

[features]
default = ["filetime"]

[dependencies]
cid = { default-features = false, version = "0.5" }
either = { default-features = false, version = "1.5" }
filetime = { optional = true, version = "0.2.12" }
multihash = { default-features = false, version = "0.11" }
quick-protobuf = { default-features = false, features = ["std"], version = "0.7" }
sha2 = { default-features = false, version = "0.9" }

[dev-dependencies]
hex-literal = { default-features = false, version = "0.3" }
libc = { default-features = false, version = "0.2.71" }
multibase = { default-features = false, version = "0.8.0" }
tar = { default-features = false, version = "0.4" }
criterion = { default-features = false, version = "0.3" }

[[bench]]
name = "ingest-tar"
harness = false

[[bench]]
name = "adder"
harness = false
